unpackaged/main/default/objects/Campaign/fields/AffiniPay_ID__c.field-meta.xml
<CustomField>
    <fullName>AffiniPay_ID__c</fullName>
    <externalId>true</externalId>
    <label>AffiniPay ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>