unpackaged/main/default/objects/Campaign/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <description>Who attended this event?</description>
    <inlineHelpText>Who attended this event?</inlineHelpText>
    <label>Attendee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bobby Bookout</fullName>
            </value>
            <value>
                <fullName>Brandon Townsell</fullName>
            </value>
            <value>
                <fullName>Dan Reed</fullName>
            </value>
            <value>
                <fullName>Eric Jenne</fullName>
            </value>
            <value>
                <fullName>Hailey Thompson</fullName>
            </value>
            <value>
                <fullName>Heidi Rogers</fullName>
            </value>
            <value>
                <fullName>Jeff Stringer</fullName>
            </value>
            <value>
                <fullName>Kenrick Tyrrell</fullName>
            </value>
            <value>
                <fullName>Kevin Barry</fullName>
            </value>
            <value>
                <fullName>Valarie Santos</fullName>
            </value>
            <value>
                <fullName>Lloyd Blaine</fullName>
            </value>
            <value>
                <fullName>Non-Sales Staff</fullName>
            </value>
            <value>
                <fullName>Outside Rep</fullName>
            </value>
            <value>
                <fullName>Sean Womack</fullName>
            </value>
            <value>
                <fullName>Shannon Yocum</fullName>
            </value>
            <value>
                <fullName>Courtney Williams</fullName>
            </value>
            <value>
                <fullName>Ruben Arce</fullName>
            </value>
            <value>
                <fullName>Sponsor Only</fullName>
            </value>
            <value>
                <fullName>Stan Rudenko</fullName>
            </value>
            <value>
                <fullName>Steven Berry</fullName>
            </value>
            <value>
                <fullName>Ellie Mizell</fullName>
            </value>
            <value>
                <fullName>Maryn Meldrum</fullName>
            </value>
            <value>
                <fullName>Carolina Corrales</fullName>
            </value>
            <value>
                <fullName>Sam Portillo</fullName>
            </value>
            <value>
                <fullName>Xazoc Campos</fullName>
            </value>
            <value>
                <fullName>Kyle Fleher</fullName>
            </value>
            <value>
                <fullName>Coltin Lash</fullName>
            </value>
            <value>
                <fullName>Tye Calhoun</fullName>
            </value>
            <value>
                <fullName>Cynthia Bayne</fullName>
            </value>
            <value>
                <fullName>Keith Kauffman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>