unpackaged/main/default/objects/Campaign/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AffiniPay</fullName>
            </value>
            <value>
                <fullName>CPACharge</fullName>
            </value>
            <value>
                <fullName>ClientPay</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>AP for Associations</fullName>
            </value>
            <value>
                <fullName>MedPay</fullName>
            </value>
            <value>
                <fullName>DesignPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>