unpackaged/main/default/objects/Campaign/fields/Bypass_VR_and_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_VR_and_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass VR and Automation</label>
    <type>Checkbox</type>
</CustomField>