unpackaged/main/default/objects/Campaign/fields/Campaign_Channel__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Channel__c</fullName>
    <label>Campaign Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Channel</valueSetName>
    </valueSet>
</CustomField>