unpackaged/main/default/objects/Campaign/fields/Campaign_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Created_Date__c</fullName>
    <formula>IF(
ISBLANK(DATEVALUE(Legacy_CreatedDate__c)),
DATEVALUE(CreatedDate),
DATEVALUE(Legacy_CreatedDate__c)
)</formula>
    <label>Campaign Created Date</label>
    <type>Date</type>
</CustomField>