unpackaged/main/default/objects/Campaign/fields/Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_Active__c</fullName>
    <formula>if( BLANKVALUE( StartDate , DATEVALUE(&quot;1900-1-1&quot;) ) = DATEVALUE(&quot;1900-1-1&quot;), NULL, 
if( EndDate  &lt; StartDate,Today() - StartDate,
if(AND(BLANKVALUE(StartDate, DATEVALUE(&quot;1900-1-1&quot;) ) != DATEVALUE(&quot;1900-1-1&quot;),BLANKVALUE(EndDate , DATEVALUE(&quot;1900-1-1&quot;) ) != DATEVALUE(&quot;1900-1-1&quot;)), EndDate - StartDate, 
if(AND(BLANKVALUE(EndDate , DATEVALUE(&quot;1900-1-1&quot;) ) = DATEVALUE(&quot;1900-1-1&quot;), BLANKVALUE(StartDate, DATEVALUE(&quot;1900-1-1&quot;) ) != DATEVALUE(&quot;1900-1-1&quot;)),TODAY() - StartDate,(1/0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>