unpackaged/main/default/objects/Campaign/fields/Event_Sponsor_Account__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Sponsor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>