unpackaged/main/default/objects/Campaign/fields/Geographical_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Region__c</fullName>
    <label>Geographical Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>