unpackaged/main/default/objects/Campaign/fields/Woodpecker_ID__c.field-meta.xml
<CustomField>
    <fullName>Woodpecker_ID__c</fullName>
    <externalId>true</externalId>
    <label>Woodpecker ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>