unpackaged/main/default/objects/Campaign/listViews/X2023_Events.listView-meta.xml
<ListView>
    <fullName>X2023_Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>-EV-2023</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>2023 Events</label>
    <sharedTo>
        <group>AffiniPay_Org</group>
    </sharedTo>
</ListView>